Fixes extra spaces in the rendering of breadcrumbs

--- a/MoinMoin/themes/basic/static/custom-less/basic.less
+++ b/MoinMoin/themes/basic/static/custom-less/basic.less
@@ -90,6 +90,7 @@ h1, h2, h3, h4, h5, h6 {
   > li {
     &+li:before {
       content: "\0020"; // Unicode space which is non-collapsing
+      padding: 0px;
     }
   }
 }
